<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyAccountActivity"
    android:background="@color/background1"
    android:padding="30dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:gravity="center"
        android:text="@string/verify_your_account"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/verification"
        android:textColor="@color/desc"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="30dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:backgroundTint="@color/desc"
        android:gravity="center"
        android:hint="@string/enter_verification"
        android:inputType="text"
        android:minHeight="60dp"
        android:textColorHint="@color/desc"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        style="@style/Btn_login"
        android:id="@+id/btn_VerifyAccountToUser"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/send"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/btn_VerifyAccountToUser"
        tools:layout_editor_absoluteX="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:text="@string/doesn_t_have_account"
            android:textColor="@color/desc"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/resend"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>