<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/activity_login"
    android:background="#43B3E6"
    android:padding="30dp">

    <!--  icon app  -->
    <ImageView
        android:id="@+id/ic_welcome_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="no"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_welcome_logo"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="30dp" />

    <!--  input username -->
    <EditText
        style="@style/Input_Login"
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="name"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_welcome_logo"
        tools:ignore="TextContrastCheck" />

    <!--  input password -->
    <EditText
        style="@style/Input_Login"
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username"
        tools:ignore="TextContrastCheck" />

    <!--  button login  -->
    <Button
        style="@style/Btn_login"
        app:backgroundTint="@null"
        android:id="@+id/Btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        tools:ignore="TextContrastCheck" />

    <!--  or -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_login"
        tools:ignore="TextContrastCheck" />

    <!--  button connect fb-->
    <LinearLayout
        android:id="@+id/btn_connect_fb"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_border"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:paddingStart="40dp"
        android:paddingEnd="0dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:src="@drawable/ic_facebook"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/facebook" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/connect_with_facebook"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <!--  register  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btn_connect_fb"
        tools:layout_editor_absoluteX="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doesn_t_have_account"
            android:textColor="@color/desc"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/btn_LoginToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="0dp"
            android:clickable="true"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
            android:focusable="true" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>